flingern/theme/public/style.css
@import "highlight.css";

:root {
  --primary-color: #33383b;
  --secondary-color: #5b6b71;
  --tertiary-color: #959e9d;
  --accent-color: #a0bab1;
  --background-color: #faf9f7;
}

/* Main elements */

body {
  font-family: Georgia, "Times New Roman", Times, serif;
  background-color: var(--background-color);
  color: var(--primary-color);
}

a {
  color: var(--secondary-color);
  text-decoration: none;
}

a:hover {
  color: var(--accent-color);
}

code {
  color: var(--accent-color);
  background: var(--primary-color);
  padding: 0.2rem 0.4rem;
}

pre code {
  display: block;
  width: 100%;
  padding: 1rem;
  white-space: pre-wrap;
  word-wrap: break-word;
}


/* Header */

#header {
  text-align: center;
}

.row {
  --bs-gutter-x: 0.7rem !important;
}

#header h1 {
  font-size: 3em;
  margin-bottom: 5px;
  margin-top: 30px;
}

#header p {
  margin-top: 5px;
}

/* Menu */

.menu ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.menu ul li {
  margin-bottom: 15px;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  text-align: center;
}

.menu ul li:last-child {
  margin-bottom: 25px;
}

.menu ul a {
  text-decoration: none;
  color: var(--secondary-color);
  font-size: 0.9em;
}

.menu ul a:hover {
  color: var(--accent-color); 
}

.menu h1 {
  color: var(--tertiary-color);
  font-size: 1.4em;
  margin-bottom: 15px;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  text-align: center;
}

/* Page */

#page,
.container {
  padding-bottom: 1.5rem;
}

#page h1 {
  margin-top: 0;
  padding-top: 0;
  padding-right: 0.7rem;
  padding-left: 0.7rem;
  text-transform: uppercase;
  letter-spacing: 0.1rem;
  text-align: center;
  background-color: var(--background-color);
  font-size: 1.5em;
}

#page img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}

#page table {
  width: 80%;
  margin: 0 auto;
  border: 1px solid var(--secondary-color);
}

#page table th {
  background: var(--accent-color);
  padding: 5px;
  font-size: 1.1em;
}

#page table td {
  padding: 5px;
}

#content {
  text-align: justify;
  padding-right: 0.7rem;
  padding-left: 0.7rem;
}

.img-item {
  margin-bottom: 0.7rem;
}

/* Footer */
.footer {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  text-align: center;
  background-color: var(--background-color);
  z-index: 100;
  padding-bottom: 0.7rem;
  padding-top: 0.7rem;
}

.footer p {
  margin: 0;
}

/* TODO: Change media queries to each section */
.nGY2 .nGY2Viewer {
  background-color: var(--background-color) !important;
}

@media only screen and (min-width: 1200px) {
  #header {
    margin-bottom: 50px;
  }

  #center {
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    max-width: 1500px;
    margin: 0 auto;
    padding-bottom: 10px;
  }

  .menu {
    flex: 0 0 20%;
    padding-top: 0.1em;
  }

  .menu ul li {
    text-align: right;
  }

  .menu h1 {
    font-size: 1.2em;
    text-align: right;
  }

  #page {
    flex: 1;
    max-width: 1100px;
    overflow-y: auto;
    padding-right: 10px;
  }

  #page h1 {
    text-align: left;
  }
}

.carousel-control-next-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23888'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
}

.carousel-control-prev-icon {
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23888'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e") !important;
}

/* galery */
.gallery-object {
  background-color: #AAAAAA;
  margin-bottom: 1rem;
  padding: 1rem;
}

